tests/machine/x/hs/map_nested_assign.error

/workspace/mochi/tests/machine/x/hs/map_nested_assign.hs:167:6: error:
    parse error on input ‘=’
    |
167 | data = Map.fromList [("outer", Map.fromList [("inner", 1)])]
    |      ^


Context around line 167:
  165| 
  166| 
  167| data = Map.fromList [("outer", Map.fromList [("inner", 1)])]
  168| 
  169| main :: IO ()
